--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -57,7 +57,10 @@ dependencies:
   sign_in_with_apple: ^5.0.0
   google_sign_in: ^6.2.1
   firebase_core: ^2.27.0
-  flutter_svg: ^2.0.10+1
+  flutter_svg: any
+  place_picker: ^0.10.0
+  permission_handler: ^11.3.0
+  geolocator: ^9.0.2
 
 
 
