Implement Picking Time Feature, Alart notification and try to fix issues on Android gradle

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -41,8 +41,6 @@
 	<false/>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
-	<key>io.flutter.embedded_views_preview</key>
-	<string>YES </string>
 	<key>NSCameraUsageDescription</key>
 	<string>This app requires access to the camera in order to capture images for your profile.</string>
 	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
@@ -55,6 +53,11 @@
 	<string>This app requires access to the photo library in order to upload images for your profile.</string>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>fetch</string>
+		<string>processing</string>
+	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
@@ -72,5 +75,7 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+	<key>io.flutter.embedded_views_preview</key>
+	<string>YES </string>
 </dict>
 </plist>
