Fixed issues in Android

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,7 +63,10 @@ dependencies:
   geolocator: ^9.0.2
   flutter_local_notifications: ^17.0.0
   timezone: ^0.9.2
-  flutter_native_timezone: ^2.0.0
+  flutter_native_timezone:
+    git:
+     url: https://github.com/pro-akbar/flutter_native_timezone.git
+     ref: e794163
 
 
 
