--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -51,11 +51,15 @@
 	<string>This app requires access to your location in order to capture your exact location for picking trashes.</string>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>This app requires access to the photo library in order to upload images for your profile.</string>
+	<key>NSUserNotificationsUsageDescription</key>
+	<string>Listi Shop would like to access push notification permission to keep you updates.</string>
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>fetch</string>
+		<string>processing</string>
+		<string>remote-notification</string>
 	</array>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
@@ -76,5 +80,7 @@
 	<false/>
 	<key>io.flutter.embedded_views_preview</key>
 	<string>YES </string>
+	<key>FirebaseAppDelegateProxyEnabled</key>
+<string>0</string>
 </dict>
 </plist>
